# idr_embed_divergence

./: .gitignore  README.md  go_enrich_README.md  pyproject.toml  readme.md  test.md  train_README.md
archive/: go_enrichment_analysis_old.py  go_enrichment_old.py  parse_names.py  temp_run_n_divergence.py
configs/: cdk_genes.json  config.py  config.yaml  embed_config.yaml  example.yaml  go_config.yaml  idrlm_pretrain.yaml  ndist_config.yml
data/seqs/: human_idrs.fasta  human_idrs_pos_updated_labels.fasta
envs/: embed_env.yml  embed_env_lite.yml  env.yml  fnd_env.yml  install_packages.sh  lm_train_env.yml  lm_train_env_lite.yml  train_env.yml  train_env_clean.yml
readme/: embed_README.md
scripts/: bma_sim_within_fam.py  fix_ortholog_names.py  get_embeddings.py  run_enrich_eval.py  run_go_enrichment.py  run_go_enrichment_old.py  run_ndivergence copy.py  run_ndivergence.py  train_idrlm.py
src/idr_diverge.egg-info/: PKG-INFO
src/idr_diverge/IDR_LM_train/: bert_config.json  bert_config_2.json  config.py  idr_pretrain_clean_wandb.py  idrlm_embed.py  pretrain_args.yaml  train.py
src/idr_diverge/archive/: esm_embed_clean copy.py  get_embeddings_origin.py  idrlm_embed_origin.py  pretraining_args.py
src/idr_diverge/distances/: cli.py  compute_ndist.py  embed_distance.py  family_to_genes.json  readme.md
src/idr_diverge/embed/: config.yaml  embed_config.yaml  esm_embed,py  esm_embed.py  get_embeddings.py  get_embeddings_2.py  idrlm_embed.py
src/idr_diverge/go_enrichment/: go_enrich_eval.py  go_enrichment_ copy.py  go_enrichment_.py  go_enrichment_analysis_old.py  (+3 more)
(+49 files in other folders)
