[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "idr-diverge"
version = "0.1.0"
description = "Embedding-based analysis of IDR functional divergence"
authors = [
    {name = "Denise Le"}
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]